# probmodeler

./: .gitignore  README.md  info_criteria.Rmd  info_criteria.html  project_suggestions.md  syllabus_NEU.md  workshop.md
CS7290_Hogwarts_Project/: Hogwarts_prob_model.md
CS7290_Hogwarts_Project/Colab Notebooks/: Hogwarts_Model_Inference.ipynb  Prior_vs_Posterior.ipynb
CS7290_Hogwarts_Project/Data Files/: data100k.csv  data100k_ground_truth.csv  hogwarts_supervised_ground_truth.csv  hogwarts_unsupervised_ground_truth.csv
projects/BayesianMMM/: README.md  data_2.csv  environment.yml  requirements.txt
projects/MultitargetTracking/: 2_Adaptations.ipynb  (+3 more)
projects/SCM-normalizing-flows/: LICENSE  README.md  setup.cfg  tox.ini
projects/SCM-normalizing-flows/combined_data/: combined_csv.csv  filtered_data.csv  filtered_data_100.csv  filtered_data_500.csv  filtered_data_binary.csv  filtered_data_binary_new.csv  filtered_data_less.csv
projects/SCM-normalizing-flows/notebook/: CS7290-normalizing-flows-SCM-approach1.ipynb  CS7290-normalizing-flows-SCM-approach2.ipynb  CS7290-normalizing-flows-SCM.ipynb
projects/SCM-normalizing-flows/src/causalfairness/: __init__.py  arch.py  data.py  experiment.py  model.py  transforms.py  utils.py
projects/SCM-normalizing-flows/tests/: test_utils.py
tutorials/: Bayesian Model Comparison.html  Bayesian cross validation.Rmd  Bayesian-cross-validation.html  Diagnostics.Rmd  Diagnostics.html  generative_block.Rmd  generative_block.html  model_comparison.Rmd  model_comparison.html  posterior_predictive.Rmd  posterior_predictive.html
(+14 files in other folders)
