###############################################
# Setup Configuration                         #

###############################################
[metadata]
name = causalfairness
version = 0.0.1-dev
description = This package has utilities for casual fairness on cartoon dataset
long_description = file: README.md
long_description_content_type = text/markdown
# Project Info
url = https://github.com/vartikatewari/Causalfairness
# Author info
author = Vartika Tewari
author_email = vartika.tewari@gmail.com
license = MIT License
keywords = normalizing flows, scm, fairness
[options]
# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src